[package]
name = "u-metaheur"
version = "0.1.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "Domain-agnostic metaheuristic optimization framework: GA, BRKGA, SA, ALNS."
repository = "https://github.com/iyulab/u-metaheur"
keywords = ["optimization", "genetic-algorithm", "metaheuristic", "evolutionary"]
categories = ["algorithms", "science"]
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]

[dependencies]
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
rand = "0.9"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "metaheur_bench"
harness = false
